course selling app

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-const JWT_ADMIN_Secret = "ilovetoeatpyazkepakodeinrainysession";
-const JWT_USER_Secret = "ilovetoeatcholebhature";
+JWT_ADMIN_Secret = "ilovetoeatpyazkepakodeinrainysession"
+JWT_USER_Secret = "ilovetoeatcholebhature"
 Mongoo_URL = "mongodb+srv://veenashukla646:SU2P2Q7QLXS9BMr4@cluster0.g5prjcx.mongodb.net/coursera-app"
